ADDED: okurigana filtering option

--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -16,5 +16,8 @@
 	<div style="margin-bottom: 14px;">
 		<p><label>Furigana should be displayed with <select id="furigana_display"><option value="hira">Hiragana</option><option value="kata">Katakana</option><option value="roma">Romaji</option></select></label>
 	</div>
+	<div style="margin-bottom: 14px;">
+		<p><label>Okurigana should be filtered <select id="filter_okurigana"><option value="yes">Yes</option><option value="no">No</option></select></label>
+	</div>
 </body>
 </html>
