CHANGED: option page header to match new name

--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -7,7 +7,7 @@
 </head>
 <body class="fi_help_page">
 
-	<h2><img src="../img/furigana_active_48.png" style="vertical-align: -10%; margin-right: 8px;"/> Furigana injector options</h2>
+	<h2><img src="../img/furigana_active_48.png" style="vertical-align: -10%; margin-right: 8px;"/> IPA furigana options</h2>
 	
 	<div style="margin-bottom: 14px;">
 		<p><label>Include text inside links <input type="checkbox" id="includelinktext_inp"/></label>
