persistent mode groundwork

--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -19,5 +19,8 @@
 	<div style="margin-bottom: 14px;">
 		<p><label>Okurigana should be filtered <select id="filter_okurigana"><option value="true">Yes</option><option value="false">No</option></select></label>
 	</div>
+	<div style="margin-bottom: 14px;">
+		<p><label>Persistent mode is <select id="persistent_mode"><option value="true">On</option><option value="false">Off</option></select></label>
+	</div>
 </body>
 </html>
