ADDED: auto start option and local file support

--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -24,6 +24,9 @@
 	<div style="margin-bottom: 14px;">
 		<p><label>Persistent mode <input type="checkbox" id="persistent_mode"/></label>
 	</div>
+	<div style="margin-bottom: 14px;">
+		<p><label>Auto-start <input type="checkbox" id="auto_start"/></label>
+	</div>
 	<div style="margin-bottom: 14px;width: 340px">
 		<p><label style="display: block;float: left">Furigana size <input type="range" id="yomi_size" style="margin-left: 10px" min="6" max="18"/></label>
 		<span style="font-style: italic; margin-left: 24px;position: fixed"><div style="float: right;position: absolute;left: 300px;"><ruby><rb>今日</rb><rt class="style_sample" style="">きょう</rt></ruby>の<ruby><rb>天気</rb><rt class="style_sample" sttyle="">てんき</rt></ruby></span></div>
