--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -9,8 +9,8 @@
 </head>
 <body class="fi_help_page">
 
-	<h2><img src="../img/furigana_active_48.png" style="vertical-align: -10%; margin-right: 8px;"/> IPA furigana options</h2>
-	
+	<h2><img src="../img/furigana_active_48.png" style="vertical-align: -10%; margin-right: 8px;"/> Furiganalize options</h2>
+
 	<div style="margin-bottom: 14px;">
 		<p><label>Include text inside links <input type="checkbox" id="includelinktext_inp"/></label>
 		<span style="font-style: italic; margin-left: 24px;">E.g. <span id="link_sample" class="fakelink"><ruby><rb>今日</rb><rt>きょう</rt></ruby>の<ruby><rb>天気</rb><rt>てんき</rt></ruby></span></span>
