--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-	<script type="text/javascript" src="../lib/jquery-2.0.2.js"></script>
+	<script type="text/javascript" src="../lib/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="options.js"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="user_guides.css" />
 	<link rel="stylesheet" type="text/css" media="all" href="../ruby_gloss.css" />
@@ -9,7 +9,7 @@
 </head>
 <body class="fi_help_page">
 
-	<h2><img src="../img/furigana_active_48.png" style="vertical-align: -10%; margin-right: 8px;"/> Furiganalize options</h2>
+	<h2><img src="../img/furigana_active_48.png" style="vertical-align: -10%; margin-right: 8px;"/> Furiganaize options</h2>
 
 	<div style="margin-bottom: 14px;">
 		<p><label>Include text inside links <input type="checkbox" id="includelinktext_inp"/></label>
