[all] Add "use_mobile_floating_button" and "globally_show_mobile_floating_button" into localStorage

--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -22,6 +22,9 @@
 		<p><label>Okurigana filter <input type="checkbox" id="filter_okurigana"/></label>
 	</div>
 	<div style="margin-bottom: 14px;">
+		<p><label>Use mobile floating button <input type="checkbox" id="use_mobile_floating_button"/></label>
+	</div>
+	<div style="margin-bottom: 14px;">
 		<p><label>Persistent mode <input type="checkbox" id="persistent_mode"/></label>
 	</div>
 	<div style="margin-bottom: 14px;">
@@ -29,7 +32,7 @@
 	</div>
 	<div style="margin-bottom: 14px;width: 340px">
 		<p><label style="display: block;float: left">Furigana size <input type="range" id="yomi_size" style="margin-left: 10px" min="6" max="18"/></label>
-		<span style="font-style: italic; margin-left: 24px;position: fixed"><div style="float: right;position: absolute;left: 300px;"><ruby><rb>今日</rb><rt class="style_sample" style="">きょう</rt></ruby>の<ruby><rb>天気</rb><rt class="style_sample" sttyle="">てんき</rt></ruby></span></div>
+		<span style="font-style: italic; margin-left: 24px;position: fixed"><div style="float: right;position: absolute;left: 300px;"><ruby><rb>今日</rb><rt class="style_sample"></rt>きょう</rt></ruby>の<ruby><rb>天気</rb><rt class="style_sample" sttyle="">てんき</rt></ruby></span></div>
 	</div><br />
 	<div style="margin-bottom: 14px;">
 		<p><label>Furigana size reset <input type="button" value="Reset size to default" id="yomi_size_reset"/></label>
