[background] use nihongo as icon title

--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -22,7 +22,7 @@
 		<p><label>Okurigana filter <input type="checkbox" id="filter_okurigana"/></label>
 	</div>
 	<div style="margin-bottom: 14px;">
-		<p><label>Use mobile floating button <input type="checkbox" id="use_mobile_floating_button"/></label>
+		<p><label>Use mobile floating button (beta) <input type="checkbox" id="use_mobile_floating_button"/></label>
 	</div>
 	<div style="margin-bottom: 14px;">
 		<p><label>Persistent mode <input type="checkbox" id="persistent_mode"/></label>
