refactor: Don't pack unused legacy codes

--- a/user_cp_unused/installation_welcome.html
+++ b/user_cp_unused/installation_welcome.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="Content-Language" content="en" />
 	<title>Welcome to Furigana Injector</title>
-	<link rel="stylesheet" type="text/css" media="all" href="user_guides.css" />
+	<link rel="stylesheet" type="text/css" media="all" href="options.css" />
 	<script type="text/javascript" src="../text_to_furigana_dom_parse.js"></script>
 	<script type="text/javascript">
 		//No idea why this, combined with text_to_furigana_dom_parse.js inclusion above, works when
