--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -2,8 +2,7 @@
 <head>
 	<script type="text/javascript" src="../lib/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="options.js"></script>
-	<link rel="stylesheet" type="text/css" media="all" href="user_guides.css" />
-	<link rel="stylesheet" type="text/css" media="all" href="../ruby_gloss.css" />
+	<link rel="stylesheet" type="text/css" media="all" href="options.css" />
 	<script src="../lib/colpick.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="../css/colpick.css" type="text/css"/>
 	<style>
