Add option "watch_page_change"

--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -24,6 +24,9 @@
 		<p><label><input type="checkbox" id="filter_okurigana"/> Okurigana filter</label>
 	</div>
 	<div class="row">
+		<p><label><input type="checkbox" id="watch_page_change"/> Watch the changes of page for dynamic pages (alpha)</label>
+	</div>
+	<div class="row">
 		<p><label><input type="checkbox" id="use_mobile_floating_button"/> Use mobile floating icon (beta)</label>
 	</div>
 	<div class="row">
