--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -24,13 +24,13 @@
 		<p><label><input type="checkbox" id="filter_okurigana"/> Okurigana filter</label>
 	</div>
 	<div class="row">
-		<p><label><input type="checkbox" id="use_mobile_floating_button"/> <code>beta</code> Use mobile floating icon</label>
+		<p><label><input type="checkbox" id="use_mobile_floating_button"/> <code>beta</code> Use mobile floating icon (Size may be unreasonable small on mobile. Doesn't find a way to fix this currently)</label>
 	</div>
 	<div class="row">
 		<p><label><input type="checkbox" id="watch_page_change"/> <code>beta</code> Watch the changes of page for dynamic pages. (<b>Warning: Due to technical reasons, this may impact performance, and some furigana may become wrong when processing the same area multiple times.</b> These are known issues, don't complain this in issue tracker, unless it cause severe problem (e.g. crash) or you have found solution or going to make a PR to fix this. Thanks.) </label>
 	</div>
 	<div class="row">
-		<p><label><input type="checkbox" id="persistent_mode"/> Persistent mode </label>
+		<p><label><input type="checkbox" id="persistent_mode"/> Persistent mode <!-- (keep Furigana on/off status across pages) --> </label>
 	</div>
 	<div class="row">
 		<p><label><input type="checkbox" id="auto_start"/> Auto-start</label>
