refactor: clear code. but PERSISTENT_MODE is currently broken

--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -30,7 +30,7 @@
 		<p><label><input type="checkbox" id="watch_page_change"/> <code>beta</code> Watch the changes of page for dynamic pages. (<b>Warning: Due to technical reasons, this may impact performance, and some furigana may become wrong when processing the same area multiple times.</b> These are known issues, don't complain this in issue tracker, unless it cause severe problem (e.g. crash) or you have found solution or going to make a PR to fix this. Thanks.) </label>
 	</div>
 	<div class="row">
-		<p><label><input type="checkbox" id="persistent_mode"/> <code>beta</code> Persistent mode (keep Furigana on/off status across pages)</label>
+		<p><label><input type="checkbox" id="persistent_mode"/> <code>beta</code> Persistent mode (keep Furigana on/off status across tabs and pages)</label>
 	</div>
 	<div class="row">
 		<p><label><input type="checkbox" id="auto_start"/> <code>beta</code> Auto-start</label>
