--- a/user_cp_unused/installation_welcome.html
+++ b/user_cp_unused/installation_welcome.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript">
 		//No idea why this, combined with text_to_furigana_dom_parse.js inclusion above, works when
 		//  using a postMessage instead wont.
-		browser.tabs.sendMessage({message: "init_tab_for_fi"});
+		browser.tabs.sendMessage({message: "init_dom_parser_for_tab"});
 	</script>
 </head>
 <body class="fi_help_page">
