--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -1,5 +1,6 @@
 ﻿<html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<script type="text/javascript" src="../lib/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="options.js"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="options.css" />
