Add option to options_ui
Enable toggle ON/OFF of the function to give priority
to consecutive Kanji characters from options_uit.

--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -37,6 +37,9 @@
 		<p><label><input type="checkbox" id="auto_start"/> <code>beta</code> Auto-start always. <b>Not recommended.</b></label>
 	</div>
 	<div class="row">
+		<p><label><input type="checkbox" id="prevent_splitting_consecutive_kanjis"/> <code>beta</code> Prevents splitting of consecutive Kanji characters. <b>This feature is in alpha phase testing.</b></label>
+	</div>
+	<div class="row">
 		<p><label>Furigana should be displayed with <select id="furigana_display"><option value="hira">Hiragana</option><option value="kata">Katakana</option><option value="roma">Romaji</option></select></label>
 	</div>
 	<div style="margin-bottom: 14px">
