--- a/user_cp/options.html
+++ b/user_cp/options.html
@@ -18,46 +18,56 @@
 
 	<div class="row">
 		<p><label><input type="checkbox" id="includelinktext_inp"/> Include text inside links</label>
-		<span style="font-style: italic; margin-left: 24px;">E.g. <span id="link_sample" class="fakelink"><ruby><rb>今日</rb><rt>きょう</rt></ruby>の<ruby><rb>天気</rb><rt>てんき</rt></ruby></span></span>
+		<span style="font-style: italic; margin-left: 24px;">E.g. <span id="link_sample" class="fakelink"><ruby><rb>今日</rb><rt>きょう</rt></ruby>の<ruby><rb>天気</rb><rt>てんき</rt></ruby></span></span></p>
 	</div>
 	<div class="row">
-		<p><label><input type="checkbox" id="prevent_splitting_consecutive_kanjis"/> <code>alpha</code> Always prefer to choose the longer segmentations when analyzing a sentence, to prevent some wrong splitting of consecutive Kanji characters (<i>This feature is in alpha phase testing though, it is still <b class="recommended">strongly recommended to be enabled.</b></i>)</label>
+		<p><label><input type="checkbox" id="prevent_splitting_consecutive_kanjis"/> <code>alpha</code> Always prefer to choose the longer segmentations when analyzing a sentence, to prevent some wrong splitting of consecutive Kanji characters (<i>This feature is in alpha phase testing though, it is still <b class="recommended">strongly recommended to be enabled.</b></i>)</label></p>
 	</div>
 
 	<div class="row">
-		<p><label><input type="checkbox" id="filter_okurigana"/> Okurigana filter</label>
+		<p><label><input type="checkbox" id="filter_okurigana"/> <code>beta</code> Handle Okurigana（送り仮名）(Notice that this feature may be slightly decrease the correction of furigana) For example,
+			<ul>
+				<li>Disabled: <ruby><rb>引き渡し</rb><rt>ひきわたし</rt></ruby>、<ruby><rb>申し込み</rb><rt style="">もうしこみ</rt></ruby>、<ruby><rb>入り口</rb><rt style="">いりくち</rt></ruby></li>
+				<li>Enabled:
+					<span><ruby><rb>引</rb><rt style="">ひ</rt></ruby>き<ruby><rb>渡</rb><rt style="">わた</rt></ruby>し</span>、
+					<span><ruby><rb>申</rb><rt style="">もう</rt></ruby>し<ruby><rb>込</rb><rt style="">こ</rt></ruby>み</span>、
+					<span><ruby><rb>入</rb><rt style="">い</rt></ruby>り<ruby><rb>口</rb><rt style="">くち</rt></ruby></span>
+				</li>
+			</ul>
+
+		</label></p>
 	</div>
 	<div class="row">
-		<p><label><input type="checkbox" id="use_mobile_floating_button"/> <code>beta</code> Use mobile floating icon (Size may be unreasonable small on mobile. Doesn't find a way to fix this currently)</label>
+		<p><label><input type="checkbox" id="use_mobile_floating_button"/> <code>beta</code> Use mobile floating icon (Size may be unreasonable small on mobile. Doesn't find a way to fix this currently)</label></p>
 	</div>
 	<div class="row">
-		<p><label><input type="checkbox" id="watch_page_change"/> <code>beta</code> Watch the changes of page for dynamic pages. (<b>Warning: Due to technical reasons, this may impact performance, and some furigana may become wrong when processing the same area multiple times.</b> These are known issues, don't complain this in issue tracker, unless it cause severe problem (e.g. crash) or you have found solution or going to make a PR to fix this. Thanks.) </label>
+		<p><label><input type="checkbox" id="watch_page_change"/> <code>beta</code> Watch the changes of page for dynamic pages. (<b>Warning: Due to technical reasons, this may impact performance, and some furigana may become wrong when processing the same area multiple times.</b> These are known issues, don't complain this in issue tracker, unless it cause severe problem (e.g. crash) or you have found solution or going to make a PR to fix this. Thanks.) </label></p>
 	</div>
 	<div class="row">
 		<p><label><input type="checkbox" id="persistent_mode"/> <code>alpha</code> Persistent mode (keep Furigana on/off status across tabs and pages. <b class="not_recommended">Not recommended. Be careful if you still meant to use this, it may slow down or even crash your browser when you accidentally open an unexpected large web page, and may slow down a bit whenever use back/next of browser.</b>)</label>
 	</div>
 	<div class="row">
-		<p><label><input type="checkbox" id="auto_start"/> <code>alpha</code> Auto-start always. <b class="not_recommended">Not recommended.</b></label>
+		<p><label><input type="checkbox" id="auto_start"/> <code>alpha</code> Auto-start always. <b class="not_recommended">Not recommended.</b></label></p>
 	</div>
 	<div class="row">
-		<p><label>Furigana should be displayed with <select id="furigana_display"><option value="hira">Hiragana</option><option value="kata">Katakana</option><option value="roma">Romaji</option></select></label>
+		<p><label>Furigana should be displayed with <select id="furigana_display"><option value="hira">Hiragana</option><option value="kata">Katakana</option><option value="roma">Romaji</option></select></label></p>
 	</div>
 	<div style="margin-bottom: 14px">
 		<p style="display:flex;align-items:center;">
 			<label style="display:flex;align-items:center;">Furigana size <input type="range" id="yomi_size" style="margin-left: 10px" min="6" max="18"/></label>
 			<span>
-				<ruby><rb>今日</rb><rt class="style_sample"></rt>きょう</rt></ruby>の<ruby><rb>天気</rb><rt class="style_sample" sttyle="">てんき</rt></ruby>
+				<ruby><rb>今日</rb><rt class="style_sample"></rt>きょう</rt></ruby>の<ruby><rb>天気</rb><rt class="style_sample" style="">てんき</rt></ruby>
 			</span>
 		</p>
 	</div>
 	<div class="row">
-		<p><label>Furigana size reset <input type="button" value="Reset size to default" id="yomi_size_reset"/></label>
+		<p><label>Furigana size reset <input type="button" value="Reset size to default" id="yomi_size_reset"/></label></p>
 	</div>
 	<div class="row">
-		<p><label>Furigana color <input type="button" value="Pick a color" id="yomi_color"/></label>
+		<p><label>Furigana color <input type="button" value="Pick a color" id="yomi_color"/></label></p>
 	</div>
 	<div class="row">
-		<p><label>Furigana color reset <input type="button" value="Reset color to default" id="yomi_color_reset"/></label>
+		<p><label>Furigana color reset <input type="button" value="Reset color to default" id="yomi_color_reset"/></label></p>
 	</div>
 </body>
 </html>
