refactor: [all] Migrate to TypeScript

--- a/options_ui/options.html
+++ b/options_ui/options.html
@@ -35,7 +35,12 @@
 		</label></p>
 	</div>
 	<div class="row">
-		<p><label>Furigana should be displayed with <select id="furigana_display"><option value="hira">Hiragana</option><option value="kata">Katakana</option><option value="roma">Romaji</option></select></label></p>
+		<p><label>Furigana should be displayed with
+			<select id="furigana_display">
+				<option value="hira">Hiragana</option>
+				<option value="kata">Katakana</option>
+				<option value="roma">Romaji</option>
+			</select></label></p>
 	</div>
 	<h3>Elements</h3>
 	<div class="row">
