--- a/options_ui/options.html
+++ b/options_ui/options.html
@@ -2,7 +2,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<script type="text/javascript" src="../lib/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="../js/common.js"></script>
+	<script type="text/javascript" src="/js/common.js"></script>
 	<script type="text/javascript" src="options.js"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="options.css" />
 	<script src="../lib/colpick.js" type="text/javascript"></script>
