--- a/options_ui/options.html
+++ b/options_ui/options.html
@@ -1,12 +1,12 @@
 ﻿<html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<script type="text/javascript" src="../lib/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="/lib/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="/js/common.js"></script>
-	<script type="text/javascript" src="options.js"></script>
+	<script type="text/javascript" src="/js/options_ui.js"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="options.css" />
-	<script src="../lib/colpick.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="../css/colpick.css" type="text/css"/>
+	<script src="/lib/colpick.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="/css/colpick.css" type="text/css"/>
 	<style>
 		.row {
 			margin-bottom: 0px;
